<resources>
    <string name="app_name">Flag System</string>
    <string name="selectSubject">Available Subjects at this Time:</string>
    <string name="math">MATH</string>
    <string name="chem">CHEMISTRY</string>
    <string name="buss_econ">BUSINESS/ECON</string>
    <string name="bio">BIOLOGY</string>
    <string name="phys">PHYSICS</string>
    <string name="psych_soc">PSYCHOLOGY/SOCIOLOGY</string>
    <string name="health">HEALTH SCIENCE</string>
    <string name="comp">COMP-SCI</string>
    <string name="nursing">NURSING</string>
    <string name="other">OTHER</string>
    <string name="temp_string">Temp_String</string>
    <string name="page_tutor">Page a Tutor</string>
    <string name="request_text">A (Subject) Tutor has been Requested</string>
    <string name="please_wait">Please Wait\nOne of these Tutor(s) will be right with you:</string>
    <string name="cancel_req">Cancel Request</string>
</resources>
