<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="12"
    tools:context=".Subject_Selection">

    <RelativeLayout
        android:layout_weight='2'
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/titleText"
            android:text="@string/selectSubject"
            android:textSize="29sp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>


    <GridLayout
        android:columnCount="2"
        android:rowCount="5"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:layout_weight='10'
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="14dp">

        <!-- Row 1 -->
        <!-- Column 1 -->

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardBackgroundColor="@android:color/holo_red_dark"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/math"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

<!--&lt;!&ndash;                <ImageView&ndash;&gt;-->
<!--&lt;!&ndash;                    android:layout_width="30dp"&ndash;&gt;-->
<!--&lt;!&ndash;                    android:layout_height="30dp"&ndash;&gt;-->
<!--&lt;!&ndash;                    android:layout_gravity="center_horizontal"&ndash;&gt;-->
<!--&lt;!&ndash;                    android:src="@drawable/temp_icon" />&ndash;&gt;-->


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Row 1 -->
        <!-- Column 2 -->

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardBackgroundColor="@android:color/holo_orange_dark"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

<!--                <ImageView-->
<!--                    android:src="@drawable/temp_icon"-->
<!--                    android:layout_gravity="center_horizontal"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content" />-->

                <TextView
                    android:text="@string/chem"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Row 2 -->
        <!-- Column 1 -->

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardBackgroundColor="@color/yellow"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

<!--                <ImageView-->
<!--                    android:src="@drawable/temp_icon"-->
<!--                    android:layout_gravity="center_horizontal"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content" />-->

                <TextView
                    android:text="@string/buss_econ"
                    android:gravity = "center"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Row 2 -->
        <!-- Column 2 -->

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardBackgroundColor="@color/green"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

<!--                <ImageView-->
<!--                    android:src="@drawable/temp_icon"-->
<!--                    android:layout_gravity="center_horizontal"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content" />-->

                <TextView
                    android:text="@string/bio"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Row 3 -->
        <!-- Column 1 -->

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardBackgroundColor="@android:color/holo_blue_bright"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

<!--                <ImageView-->
<!--                    android:src="@drawable/temp_icon"-->
<!--                    android:layout_gravity="center_horizontal"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content" />-->

                <TextView
                    android:text="@string/phys"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Row 3 -->
        <!-- Column 2 -->

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardBackgroundColor="@color/blue"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

<!--                <ImageView-->
<!--                    android:src="@drawable/temp_icon"-->
<!--                    android:layout_gravity="center_horizontal"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content" />-->

                <TextView
                    android:text="@string/psych_soc"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Row 4 -->
        <!-- Column 1 -->

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardBackgroundColor="@color/purple"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

<!--                <ImageView-->
<!--                    android:src="@drawable/temp_icon"-->
<!--                    android:layout_gravity="center_horizontal"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content" />-->

                <TextView
                    android:text="@string/health"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Row 4 -->
        <!-- Column 2 -->

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardBackgroundColor="@android:color/darker_gray"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

<!--                <ImageView-->
<!--                    android:src="@drawable/temp_icon"-->
<!--                    android:layout_gravity="center_horizontal"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content" />-->

                <TextView
                    android:text="@string/comp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Row 5 -->
        <!-- Column 1 -->

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardBackgroundColor="@color/pink"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

<!--                <ImageView-->
<!--                    android:src="@drawable/temp_icon"-->
<!--                    android:layout_gravity="center_horizontal"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content" />-->

                <TextView
                    android:text="@string/nursing"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Row 5 -->
        <!-- Column 2 -->

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardBackgroundColor="@color/other_color"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

<!--                <ImageView-->
<!--                    android:src="@drawable/temp_icon"-->
<!--                    android:layout_gravity="center_horizontal"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content" />-->

                <TextView
                    android:text="@string/other"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>
</LinearLayout>